--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
         }
         }
     </style>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    <script>
+        $('document').ready(function(){
+            alert('loaded')
+        });
+    </script>
 </head>
 <body>
     <nav id="navigation">
