--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
 
         .disappear{
             display: none !important;
-            
         }
 
         @media (max-width: 700px){
@@ -90,6 +89,16 @@
         @media(min-width: 700px){
             .menu2{
                 /* display: none; */
+            }
+        }
+
+        @keyframes disappear{
+            from {
+                opacity: 0;
+
+            } to{
+                opacity: 1;
+
             }
         }
 
